--- a/web/src/assets/main.css
+++ b/web/src/assets/main.css
@@ -1,5 +1,6 @@
-@import "./base.css";
 
+/*
+  add your own rules here
 #app {
   max-width: 1280px;
   margin: 0 auto;
@@ -26,3 +27,45 @@
     padding: 0 2rem;
   }
 }
+
+html {
+  font-size: 14px;
+}
+
+body {
+  background-color: var(--surface-ground);
+  font-family: var(--font-family);
+  font-weight: normal;
+  color: var(--text-color);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  padding: .5em;
+  margin-bottom: 50px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 1.5rem 0 1rem 0;
+  font-family: inherit;
+  font-weight: 600;
+  line-height: 1.2;
+  color: inherit;
+}
+
+h1 { font-size: 2.5rem; }
+h2 { font-size: 2rem; }
+h3 { font-size: 1.75rem; }
+h4 { font-size: 1.5rem; }
+h5 { font-size: 1.25rem; }
+h6 { font-size: 1rem; }
+p {
+  line-height: 1.5;
+  margin: 0 0 1rem 0;
+}
+
+.card {
+  background: var(--surface-card);
+  padding: 2rem;
+  border-radius: 10px;
+  margin-bottom: 2rem;
+}
+*/
